# calc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  calc.py  dev-requirements.txt  pyproject.toml  requirements.txt
src/: gui.py  main.py  operation.py  schemas.py
src/routers/: __init__.py
src/routers/calc/: router.py  schemas.py
src/static/css/: style.css  style.css.map  style.sass
src/static/scripts/: index.js
src/templates/: index.html
tests/: test_api.py  test_calc.py  test_calculator.py  test_gui.py
