[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
jinja2 = "^3.1.4"
fastapi = {extras = ["standard"], version = "^0.114.2"}

[tool.poetry.dev-dependencies]
pytest = "^8.3.2"
uvicorn = "^0.30.6"
httpx = "^0.27.2"
mypy = "^1.11.2"
ruff = "^0.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
strict = true
files = ["src", "tests"]
ignore_missing_imports = true


[tool.pytest.ini_options]
pythonpath = [".", "src"]
